design and ui updated, and bug fixes

--- a/app/src/main/res/layout/todo_list_layout.xml
+++ b/app/src/main/res/layout/todo_list_layout.xml
@@ -6,6 +6,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/background_card"
         android:padding="8dp">
 
         <RadioGroup
@@ -22,14 +27,17 @@
                 android:id="@+id/rbTodoItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp" />
+                android:layout_marginStart="8dp"
+                android:buttonTint="@color/dark_pink" />
         </RadioGroup>
 
         <TextView
             android:id="@+id/tvTodoItem"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Todo Item"
+            android:fontFamily="@font/roboto"
+            android:text="@string/todo_item"
+            android:textColor="@color/dark_pink"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
