--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/main_background"
         tools:context=".MainActivity">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -18,6 +19,7 @@
             android:contentDescription="@string/add_button"
             android:focusable="true"
             android:src="@drawable/ic_add"
+            app:backgroundTint="@color/rose_gold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:maxImageSize="30dp" />
